...
  @override
  Widget build(BuildContext context) {
    return Padding(
      padding: const EdgeInsets.symmetric(vertical: 20),
      child: IconButton(
        icon: const Icon(Icons.search_rounded),
        tooltip: 'Search',
        onPressed: () => context.push(AppRoutes.search),
      ),
    );
  }
}

